Add did-webvh configuration to witness.yaml

--- a/agents/witness.yaml
+++ b/agents/witness.yaml
@@ -39,4 +39,6 @@ plugin:
 
 plugin-config-value:
   - webvh.witness=true
+  - did-webvh.witness=true
   - webvh.server_url=https://demo.identifier.me
+  - did-webvh.server_url=https://demo.identifier.me
