--- a/docs/witness.yaml
+++ b/docs/witness.yaml
@@ -2,6 +2,8 @@
 label: Witness Service
 endpoint: https://demo.cloudagent.agency
 
+log-level: info
+
 auto-provision: true
 recreate-wallet: false
 
