--- a/docs/dev.yaml
+++ b/docs/dev.yaml
@@ -2,7 +2,7 @@
 label: Development Agent
 
 auto-provision: true
-recreate-wallet: false
+recreate-wallet: true
 
 admin: [0.0.0.0, 8020]
 admin-insecure-mode: true
