Fix outbound-transport format in endorser.yml

--- a/docs/endorser.yml
+++ b/docs/endorser.yml
@@ -5,7 +5,7 @@ label: endorser
 inbound-transport:
   - [ws, 0.0.0.0, 8021]
   - [http, 0.0.0.0, 8022]
-outbound-transport: ws, http
+outbound-transport: [ws, http]
 
 admin: [0.0.0.0, 8020]
 admin-insecure-mode: true
